@@ -18,6 +18,7 @@ Maintenance release.
      (Alexander Belchenko, Bug #824381)
  * qunshelve:
    * Disable OK button while executing unshelve. (IWATA Hidetaka, Bug #842818)
+   * Avoid NoSuchFile error when working tree has added and removed file. (IWATA Hidetaka, Bug #842842)
  * Updated translations.
 
 
